Fix : Changed the color on nav bar on hover to have more contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ header {
 }
 
 .nav-menu li a:hover {
-  color: #f1c47c;
+  color: #e17020;
 }
 
 .nav-link {
